Update styling for table-hr file

--- a/packages/common/components/elements/table-hr.marko
+++ b/packages/common/components/elements/table-hr.marko
@@ -3,7 +3,9 @@ import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 $ const style = {
   "font-size": "1px",
   "line-height": "1px",
-  "border-bottom": "2px solid #eeeeee",
+  "border-bottom": "1px solid #cccccc",
+  "clear": "both",
+  "margin": "0 0 5px 0",
   ...input.style,
 };
 
