--- a/packages/common/components/elements/list-header.marko
+++ b/packages/common/components/elements/list-header.marko
@@ -1,22 +1,19 @@
-<tr>
-  <td align="center" valign="top">
-    <table role="presentation" width="100%" border="0" align="center"  cellpadding="0" cellspacing="0">
-      <tbody>
-        <tr>
-          <td align="center" valign="top" >
-            <table role="presentation" border="0" align="center" cellpadding="0" cellspacing="0" style="background: #eff1f3;" >
-              <tbody>
-                <tr>
-                  <td align="center" valign="middle" height="38">
-                    <a href="#" target="_blank" style="font-size:15px;color: #000000;text-decoration: none;display: block;font-weight:700;font-family:'Roboto', Arial, sans-serif;text-transform: uppercase;padding: 0 24px;" >${input.title}</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-        <common-table-spacer-element height="24" />
-      </tbody>
-    </table>
-  </td>
-</tr>
+<table align="center" class="row section-title" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; width: 100%; position: relative; display: block; margin: 0; background:#e31e30; padding: 0;  margin: 0 0 2px 0;" bgcolor="#e31e30;">
+  <tbody>
+    <tr style="padding: 0;" align="left">
+      <td class="text-pad" style="border-collapse: collapse !important;  margin: 0; padding: 5px 10px;" align="left" valign="top">
+        <span style="display: block; color: #ffffff!important; font-weight: bold; font-family: 'Arial', 'Helvetica', sans-serif; font-size: 18px; line-height: 20px; word-break: normal !important; word-wrap: normal !important; text-transform: uppercase;">
+          ${input.title}
+        </span>
+      </td>
+      <td class="expander" style="border-collapse: collapse !important;  visibility: hidden; width: 0px; padding: 0;"></td>
+    </tr>
+  </tbody>
+</table>
+<table>
+  <tbody>
+    <tr>
+      <td style="width: 100%;line-height: 5px;"></td>
+    </tr>
+  </tbody>
+</table>
