--- a/packages/common/components/elements/link.marko
+++ b/packages/common/components/elements/link.marko
@@ -1,18 +1,18 @@
 $ const { linkText, linkUrl } = input;
 
 $ const linkStyle = {
-  "font-size": "17px",
-  "line-height": "23px",
-  "color": "#3475b6",
-  "font-weight": "400",
   "text-decoration": "none",
+  "color": "#ffffff",
+  "background-color": "#e31e30",
+  "padding": "5px",
+  "border-radius": "2px",
+  "font-size": "11px",
+  "margin-right": "5x",
   ...input.linkStyle,
 };
 
-<tr>
-  <td align="left" valign="top">
-    <a style=linkStyle href=linkUrl>
-      ${linkText}
-    </a>
-  </td>
-</tr>
+<p align="right" style="margin-top: 8px;">
+  <a style=linkStyle href=linkUrl>
+    ${linkText}
+  </a>
+</p>
