Use ‘bonhill’ current styling for view-online

--- a/packages/common/components/blocks/view-online.marko
+++ b/packages/common/components/blocks/view-online.marko
@@ -1,17 +1,66 @@
 $ const { website } = out.global;
 
-<tr>
-  <td align="center" valign="top" >
-    <table role="presentation" width="610" border="0" align="center" cellpadding="0" cellspacing="0" class="wrap003">
-      <tbody>
-        <common-table-spacer-element height="13" />
-        <tr>
-          <td align="center" valign="middle" style="font-size:15px;line-height:19px; color:#62626c;font-weight:400;">
-            <a href="@{mv_online_version}@" style="text-decoration: none;color: #62626c;">View in browser</a> &nbsp; | &nbsp; <a href=website.get("origin") style="text-decoration: none;color: #62626c;">${website.get("name")}</a>
-          </td>
-        </tr>
-        <common-table-spacer-element height="10" />
-      </tbody>
-    </table>
-  </td>
-</tr>
+<div class="" style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:rgba(0,0,0,0);margin:0;border-top-left-radius:0;border-top-right-radius:0;border-bottom-right-radius:0;border-bottom-left-radius:0">
+  <!--[if false]>
+    <div style="display: none"><![endif]--><!--[if gte mso 9]></div>
+    <div style="background-color: transparent; border:none;">
+      <![endif]-->
+      <!--[if false]>
+    </div>
+  <![endif]-->
+  <table class="outer" style="border-collapse:collapse;width:600px;display:block" cellspacing="0" cellpadding="0" align="center" role="presentation">
+    <tbody>
+      <tr>
+        <td style="padding:0 10px;background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;background-position:50% 50%;background-size:cover;border-radius:0">
+          <table style="display:block;width:100%;border-collapse:collapse" class="containerWrapper tbContainer" cellspacing="0" cellpadding="0" role="presentation">
+            <tbody>
+              <tr>
+                <td class="columnContainer" style="vertical-align:top;min-width:5px;width:580px;padding:0;background-color:rgba(0,0,0,0)">
+                  <table style="border-collapse:collapse" width="100%" cellspacing="0" cellpadding="0" role="presentation">
+                    <tbody>
+                      <tr>
+                        <td class="inner ui-sortable" style="min-width:5px;padding:0 10px 10px;vertical-align:top;word-wrap:break-word;word-break:break-word;background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;background-position:50% 50%;background-size:cover;border-radius:0" align="left">
+                          <div style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:transparent">
+                            <!--[if false]>
+                              <div style="display: none">
+                            <![endif]-->
+                            <!--[if gte mso 9]>
+                              <p style="margin: 0px; padding: 0px; line-height: 125%; text-align: center;">
+                                <span style="display: inline-block; font-size: 10px;">
+                                  Having trouble viewing this E-mail? <span style="display: inline-block; color: rgb(185, 32, 37);"></span>
+                                  <a href="@{mv_online_version}@" style="text-decoration: none;">
+                                    <span style="display: inline-block; color: rgb(185, 32, 37);">
+                                      Click here to view the online version
+                                    </span>
+                                  </a>
+                                </span>
+                              </p>
+                            <![endif]-->
+                            <!--[if false]>
+                              </div>
+                            <![endif]-->
+                            <!--[if !mso]><!---->
+                            <p style="margin:0;padding:0;line-height:20px;mso-line-height-rule:at-least;text-align:center">
+                              <span style="line-height:125%;display:inline-block;font-size:10px">
+                                Having trouble viewing this E-mail?
+                                <span style="line-height:125%;display:inline-block;color:#b92025"></span>
+                                <a href="@{mv_online_version}@" style="text-decoration:none">
+                                  <span style="line-height:125%;display:inline-block;color:#b92025">Click here to view the online version</span>
+                                </a>
+                              </span>
+                            </p>
+                            <!--<![endif]-->
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
