Use current ‘bonhill’ head styling

--- a/packages/common/components/blocks/head.marko
+++ b/packages/common/components/blocks/head.marko
@@ -1,60 +1,47 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-<style type="text/css">
-    /* Outlook link fix */
-    #outlook a { padding: 0;}
-    /* Hotmail background &amp; line height fixes */
-    .ExternalClass { width: 100% !important;}
-    .ExternalClass, .ExternalClass p,.ExternalClass span,.ExternalClass font,  .ExternalClass td,.ExternalClass div {line-height: 100%; }
-    /* Image borders &amp; formatting */
-    img {outline: none;text-decoration: none;height: auto;-ms-interpolation-mode: bicubic;margin: 0 0 0 0 !important;}
-    a img { border: none; margin: 0 0 0 0 !important;height: auto;}
-    /* Re-style iPhone automatic links (eg. phone numbers) */
-    .applelinks a { color: #222222;text-decoration: none; }
-    /* Hotmail symbol fix for mobile devices */
-    .ExternalClass img[class^=Emoji] { width: 10px !important; height: 10px !important;display: inline !important;}
-    .tpl-content { display: initial !important;padding: 0 !important;  }
-    /* Media Query for mobile */
-    /* Media Query for mobile */
-    @media screen and (max-width:650px) {
-    .wrap000{width: 100% !important;}
-    .img_resize1{height: auto !important;max-width: 600px !important;width: 100% !important;}
-    .wrap003 {width: 100% !important;padding: 0 10px !important;}
-    }
-    @media screen and (max-width:599px) {
-  .split_cont1 {width: 100% !important;display: inline-block !important;text-align: center !important;padding: 0 0px 10px 0px !important;}
-    }
-  @media screen and (max-width: 479px) {
-    .wdt{width: 180px !important;}
-    .mobile{display: block !important;}
-    .mobile1{display: none!important;}
-    .wdth{text-align: left !important;padding: 0 29px 0 0 !important;}
-    .font1{font-size: 21px !important;line-height: 24px !important}
-    .img_resize2{width: 100% !important; height: auto !important;}
-    .height-resize{height: 15px !important;}
-    .split{width:100% !important;display: inline-block !important;padding: 0 0 20px 0 !important;}
-    .wid_5{width: 100% !important;}
-    .split1{display:none !important;}
-    .split_cont1{width: 100% !important;display: inline-block !important;text-align: center !important;padding: 0 0px 10px 0px !important;}
-    *[class~=show_on_mobile] {
-      display: block !important;
-      width: auto !important;
-      max-height: inherit !important;
-      overflow: visible !important;
-      float: none !important;
-    }
-    *[class~=hide_on_mobile] {
-      display: none !important;
-      mso-hide: all !important;
-    }
-    .pad{padding: 0 5px 0 0 !important;}
-  }
-  @media screen and (max-width: 350px) {
-    .wdt{width: 150px !important;}
-    .font1{font-size: 15px !important;line-height: 18px !important;}
-    .font2{font-size: 14px !important;}
-  }
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>My Email Subject</title>
+<meta name="referrer" content="never">
+<style>
+  body,div{font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:#fff}
+  div div{background-color:transparent}[data-layout=true]{margin:0 auto;max-width:600px}
+  p{margin:0;padding:0;line-height:20px;mso-line-height-rule:at-least}
+  p span{line-height:125%;display:inline-block}.dividerWrapper p span{line-height:0}
+  ol,ul{margin-top:15px;margin-bottom:15px;line-height:20px;mso-line-height-rule:at-least;list-style-position:inside}
+  p img{max-width:100%}a{text-decoration:none}
+  u a{text-decoration:underline}
+  h1,h2,h3,h4{margin:0}.imageWrapper
+  a img{text-decoration:none;border:0}
+  body[data-outlook-cycle] .tbContainer{display:block!important}
+  body[data-outlook-cycle] .tbContainer.multi
+  table{table-layout:fixed;height:auto!important}
+  body[data-outlook-cycle] .tbContainer.multi
+  td{width:auto!important;min-height:auto!important}
+  body[data-outlook-cycle] .tbContainer.multi
+  tr td{display:block}
+  body[data-outlook-cycle] .tbContainer.multi .inner{height:auto!important;min-height:auto!important}
+  body[data-outlook-cycle] .tbContainer .inner{box-sizing:border-box}body[data-outlook-cycle] .outer{width:auto!important}
+  body[data-outlook-cycle] .tbContainer .columnContainer
+  table{table-layout:fixed!important}
+  body[data-outlook-cycle] .innerTable{min-height:auto!important}@media only screen and (max-width:768px){.tbContainer{display:block!important}
+  a span{line-height:inherit!important}
+  .multi table{table-layout:fixed;height:auto!important}
+  .multi td{width:auto!important;min-height:auto!important}
+  .multi tr,.multi tr td{display:block}
+  .single-line.multi tr,
+  .single-line.multi tr td{display:table-cell}
+  .multi .inner{height:auto!important;min-height:auto!important}
+  .tbContainer .inner{box-sizing:border-box}.outer{width:auto!important}
+  .tbContainer .columnContainer table{table-layout:fixed!important}
+  .innerTable{min-height:auto!important}div.none{display:none;height:0}
+  .no-wrap-section .outer .multi tbody tr td,.no-wrap-section .outer .multi tbody tr th{display:table-cell!important}
+  .no-wrap-section .outer .multi tbody tr td.inner,.no-wrap-section .outer .multi tbody tr th.inner{display:block!important}
+  .no-wrap-section .outer .multi .dividerWrapper tbody tr td,
+  .no-wrap-section .outer .multi .dividerWrapper tbody tr th{display:block!important}
+  .no-wrap-section .containerWrapper tr{display:flex!important}
+  .no-wrap-section .containerWrapper .innerTable tr{display:block!important}}
 </style>
+<!--[if gte mso 9]>
+<xml><o:OfficeDocumentSettings><o:AllowPNG/><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml>
+<![endif]-->
+<meta name="html-editor">
