Use ‘Bonhill’ footer

--- a/packages/common/components/blocks/footer.marko
+++ b/packages/common/components/blocks/footer.marko
@@ -53,7 +53,144 @@ $ const stealthLinkStyle = {
   "overflow": "hidden",
 }
 
-<tr>
+<div class="emptyContainer" style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:transparent;margin:0">
+  <!--[if false]>
+    <div style="display: none"> <![endif]--><!--[if gte mso 9]> </div>
+    <div style="background-color: transparent; border:none;"> <![endif]--> <!--[if false]> </div>
+  <![endif]-->
+  <table class="outer" style="border-collapse:collapse;width:600px;display:block" cellspacing="0" cellpadding="0" align="center" role="presentation">
+    <tbody>
+      <!--[if false]>
+        <div style="display: none"> <![endif]--><!--[if gte mso 9]>
+          <tr style="padding: 0px;mso-line-height-rule: exactly;line-height: 1px; background-color: rgba(0, 0, 0, 0);" height="0">
+            <td>&nbsp;</td>
+          </tr> <![endif]--> <!--[if false]>
+        </div>
+      <![endif]-->
+      <tr>
+        <td style="padding:10px;background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;background-position:50% 50%;background-size:cover;border-radius:0">
+          <table style="display:block;width:100%;border-collapse:collapse" class="containerWrapper tbContainer" cellspacing="0" cellpadding="0" role="presentation">
+            <tbody>
+              <tr>
+                <td class="columnContainer" style="min-width:5px;width:580px;padding:0;background-color:rgba(0,0,0,0);vertical-align:top">
+                  <table style="border-collapse:collapse" width="100%" cellspacing="0" cellpadding="0" role="presentation">
+                    <tbody>
+                      <tr>
+                        <td class="inner ui-sortable" style="min-width:5px;padding:10px;vertical-align:top;word-wrap:break-word;word-break:break-word;background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;background-position:50% 50%;background-size:cover;border-radius:0">
+                          <div style="background-color:transparent;font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000">
+                            <div class="contentBlockWrapper" style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:transparent">
+                              <meta>
+                              <meta name="viewport">
+                              <meta name="referrer">
+                              <div class="" style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:transparent">
+                                <div style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:transparent;margin:0">
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:19px;padding-bottom:5px">
+                                      <span style="line-height:125%;display:inline-block">
+                                        <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                          Connect with InvestmentNews
+                                        </span>
+                                      </span>
+                                    </span>
+                                  </p>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:19px;padding-bottom:10px">
+                                      <span style="line-height:125%;display:inline-block">
+                                        <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                          Part of
+                                        </span>
+                                      </span>
+                                    </span>
+                                  </p>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <img alt="Bonhill" src="https://mktdplp102usda.azureedge.net/org-d6cba395a2c04672b102e97fac33544f/10cf1f7e-e55c-ec11-8f8f-0022481b03ef/5zLJXCi8AOznqFTle2WIOwYWjQyba28abQouiSGmnjQ!" style="max-width:100%;margin-center:auto;margin-bottom:0;margin-right:auto;float:none" width="116px" vspace="0" hspace="0" height="30" border="0" align="middle">
+                                  </p>
+                                  <table class="social" style="border-collapse:collapse;max-width:100%;white-space:nowrap;width:200px" width="200" align="center">
+                                    <tbody align="center">
+                                      <tr align="center">
+                                        <td style="padding:10px 0;text-align:center;vertical-align:top">
+                                          <a href="https://d6cba395a2c04672b102e97fac33544f.svc.dynamics.com/t/t/mxr7QoS4C9BTqxjjoxjTFrAukwGisyrkWCDdB3BQHFkx/TSyc6CLuwajmpDEa9B9tSfAN6O7QVBDdTQTPdwNv6ZIx" style="text-decoration:none">
+                                            <img alt="Facebook" src="https://mktdplp102usda.azureedge.net/org-d6cba395a2c04672b102e97fac33544f/44f29721-2a1d-ea11-a811-000d3a86d6ba/FWcmMPh7a9bGA0VwoDWkkJMbpu3WjYfVNLpRBf72drE!" style="margin-left:auto;margin-right:auto;float:none" width="30" vspace="0" hspace="0" height="30" border="0" align="middle">
+                                          </a>
+                                        </td>
+                                        <td class="divider-bullet" style="padding:0 0;text-align:center;vertical-align:bottom"></td>
+                                        <td style="padding:10px 0;text-align:center;vertical-align:top">
+                                          <a href="https://d6cba395a2c04672b102e97fac33544f.svc.dynamics.com/t/t/E26Z0H0dQAgg8rAcAhwEcJA6rTRaynu1uLyQtUvefbEx/TSyc6CLuwajmpDEa9B9tSfAN6O7QVBDdTQTPdwNv6ZIx" style="text-decoration:none">
+                                            <img alt="Twitter" src="https://mktdplp102usda.azureedge.net/org-d6cba395a2c04672b102e97fac33544f/2904922d-2a1d-ea11-a811-000d3a86d6ba/LZQdMMiE2l53VyW8F6bceFb_4jOOo_jufzgcmE5oFd8!" style="margin-left:auto;margin-right:auto;float:none" width="30" vspace="0" hspace="0" height="30" border="0" align="middle">
+                                          </a>
+                                        </td>
+                                        <td class="divider-bullet" style="padding:0 0;text-align:center;vertical-align:bottom"></td>
+                                        <td style="padding:10px 0;text-align:center;vertical-align:top">
+                                          <a href="https://d6cba395a2c04672b102e97fac33544f.svc.dynamics.com/t/t/SA90ol4SF7C3TS7DBdJJwUWjx3ztAaIFmyxSzCPbeCMx/TSyc6CLuwajmpDEa9B9tSfAN6O7QVBDdTQTPdwNv6ZIx" style="text-decoration:none">
+                                            <img alt="LinkedIn" src="https://mktdplp102usda.azureedge.net/org-d6cba395a2c04672b102e97fac33544f/0c1d893f-2a1d-ea11-a811-000d3a86d6ba/pEb1q37cCc-XLimq7lix5jhUOSjrFXzAPboZEk_ruNU!" style="margin-left:auto;margin-right:auto;float:none" width="30" vspace="0" hspace="0" height="30" border="0" align="middle">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:12px">
+                                      <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                        This email was sent to: bfox@investmentnews.com
+                                      </span>
+                                    </span>
+                                  </p>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:12px;ine-height:19px;font-family:Arial,Helvetica,sans-serif">
+                                      <a href="https://d6cba395a2c04672b102e97fac33544f.svc.dynamics.com/t/t/xgGXPwfitBF7pLH9mcvLiHe48EtJefALQVNzAakaSMEx/TSyc6CLuwajmpDEa9B9tSfAN6O7QVBDdTQTPdwNv6ZIx?p0=JItjNsnx0bIL917qbpxgnEMJY3bzUxYqJLxK7rKBMbQx&p1=e0c00d1d-e5c2-eb11-bacc-000d3a874c42" style="text-decoration:none">
+                                        Unsubscribe
+                                      </a> | <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                        <a href="mailto:editors@investmentnews.com?subject= Editorial" style="text-decoration:none">
+                                          Contact Our Editor
+                                        </a> | <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                          <a href="https://d6cba395a2c04672b102e97fac33544f.svc.dynamics.com/t/t/bsCusvFdSxghGAsk11wzujspBTGhQ4xl9R24f02wZhUx/TSyc6CLuwajmpDEa9B9tSfAN6O7QVBDdTQTPdwNv6ZIx" style="text-decoration:none">
+                                            Advertise
+                                          </a>
+                                        </span>
+                                      </span>
+                                    </span>
+                                  </p>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:12px">
+                                      <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                        To ensure email delivery to your inbox, please add "InvestmentNews@editorial.investmentnews.com" to your email address book or safe sender list.
+                                      </span>
+                                    </span>
+                                  </p>
+                                  <p style="margin:0;padding:0;line-height:27px;mso-line-height-rule:at-least;text-align:center">
+                                    <span style="line-height:125%;display:inline-block;font-size:12px">
+                                      <span style="line-height:125%;display:inline-block;font-family:Arial,Helvetica,sans-serif">
+                                        © 2022&nbsp;InvestmentNews<br> 685 Third Avenue, New York, NY 10017, USA
+                                      </span>
+                                    </span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      <!--[if false]>
+        <div style="display: none"> <![endif]--><!--[if gte mso 9]>
+          <tr style="padding: 0px;mso-line-height-rule: exactly;line-height: 1px; background-color: rgba(0, 0, 0, 0);" height="0">
+            <td>&nbsp;</td>
+          </tr> <![endif]--> <!--[if false]>
+        </div>
+      <![endif]-->
+    </tbody>
+  </table>
+</div>
+
+
+<!-- <tr>
   <td align="center" valign="top">
     <table role="presentation" width="100%" border="0" bgcolor="#2f3031" align="center"  cellpadding="0" cellspacing="0">
       <tr>
@@ -165,4 +302,4 @@ $ const stealthLinkStyle = {
       </tr>
     </table>
   </td>
-</tr>
+</tr> -->
