--- a/packages/common/components/blocks/content/list-item.marko
+++ b/packages/common/components/blocks/content/list-item.marko
@@ -2,168 +2,65 @@ import { get, getAsArray } from "@parameter1/base-cms-object-path";
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import { URLSearchParams } from "url";
 
-$ const { content, urlParams } = input;
+$ const { content, urlParams, sectionName } = input;
 
-$ const withImage = defaultValue(input.withImage, false);
-$ const imagePosition = defaultValue(input.imagePosition, 'right');
-$ const withSection = defaultValue(input.withSection, true);
 $ const continueReading = defaultValue(input.continueReading, false);
-
 $ const queryString = (urlParams && content.type !== 'promotion') ? `?${new URLSearchParams(urlParams)}` : "";
 $ const contentUrl = `${content.siteContext.url}${queryString}`
 
-$ const imgStyles = {
-  "border": 0,
-  "outline": "none",
-  "text-decoration": "none",
-  "display": "block",
-  "height": "auto !important",
-  "max-width": "100% !important",
-};
-
-$ const imgLinkStyles = {
-  "border": 0,
-  "outline": "none",
-  "text-decoration": "none",
-};
-
-$ const tagStyle = {
-  "font-size": "14px",
-  "line-height": "19px",
-  "color": "#257478",
-  "text-transform": "uppercase",
-}
-
 $ const sponsoredTagStyle = {
-  ...tagStyle,
-  "color": "#a91b20",
-}
+  "font-size": "14px",
+  "line-height": "18px",
+  "color": "#d4af37!important",
+  "font-family": "'Arial', 'Helvetica', sans-serif",
+  "font-weight": "bold",
+  "text-align": "left",
+  "text-decoration": "none",
+  "text-transform": "uppercase",
+  "margin": "0 0 2px 0"
+};
 
-<tr>
-  <td align="center" valign="top">
-    <table role="presentation" width="610" border="0" align="center" cellpadding="0" cellspacing="0" class="wrap003">
+<div class="" style="font-family:Verdana,Arial,sans-serif;font-size:14px;color:#000;background-color:rgba(0,0,0,0);margin:0;border-top-left-radius:0;border-top-right-radius:0;border-bottom-right-radius:0;border-bottom-left-radius:0">
+  <!--[if false]>
+    <div style="display: none"> <![endif]--><!--[if gte mso 9]> </div>
+    <div style="background-color: transparent; border:none;"> <![endif]--> <!--[if false]> </div>
+  <![endif]-->
+  <table class="outer" style="border-collapse:collapse;width:600px;display:block" cellspacing="0" cellpadding="0" align="center" role="presentation">
+    <tbody>
+      <!--[if false]>
+        <div style="display: none"> <![endif]--><!--[if gte mso 9]>
+          <tr style="padding: 0px;mso-line-height-rule: exactly;line-height: 1px; background-color: rgba(0, 0, 0, 0);" height="0">
+            <td>&nbsp;</td>
+          </tr> <![endif]--> <!--[if false]>
+        </div>
+      <![endif]-->
+      <tr>
+        <td style="background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;border-radius:0">
+          <table align="center" class="row news-item" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: block; padding: 5px 0 0 0; border-top: 0px solid rgba(255,255,255,0) !important;">
+            <tbody>
 
-      $ const labels = getAsArray(content, "labels");
-      <if(labels.includes("Sponsored"))>
-        $ const tag = (content.company) ? `Sponsored Content by ${get(content, "company.name")}` : "Sponsored Content";
-        <tr>
-          <td align="left" valign="top" style=sponsoredTagStyle>${tag}</td>
-        </tr>
-      </if>
-      <else-if(withSection)>
-        <tr>
-          <td align="left" valign="top" style=tagStyle>${get(content, "primarySection.name")}</td>
-        </tr>
-      </else-if>
-
-      <common-table-spacer-element height="6" />
-
-      <if(withImage && imagePosition === 'top' && content.primaryImage)>
-        <common-table-spacer-element height="6" />
-        <tr>
-          <td align="center" valign="top">
-            <marko-core-obj-value|{ value: image }| obj=content field="primaryImage" as="object">
-              <marko-newsletter-imgix
-                src=image.src
-                alt=image.alt
-                options={ w: 1220, h: 610, fit: "crop", auto: "format,compress" }
-                class="img_resize1"
-                attrs={ border: 0, width: 610, align: "center", vspace: 5, style: imgStyles }
-              >
-                <@link href=contentUrl target="_blank" attrs={ style: imgLinkStyles } />
-              </marko-newsletter-imgix>
-            </marko-core-obj-value>
-          </td>
-        </tr>
-        <common-table-spacer-element height="10" />
-      </if>
-
-      <if(withImage && imagePosition === 'right' && content.primaryImage)>
-        <tr>
-          <td align="center" valign="top" dir="ltr">
-            <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tr>
-                <td align="left" valign="top">
-                  <table role="presentation" width="100%" border="0" cellpadding="0" cellspacing="0" class="pad" style="padding: 0 30px 0px 0;">
-                    <tr>
-                      <td align="left" valign="top">
-                        <a style="font-size: 24px;line-height: 28px;color: #202022;font-weight: 700;text-decoration: none;" class="font1" href=contentUrl>
-                          ${content.name}
-                        </a>
-                      </td>
-                    </tr>
-                    <tr class="hide_on_mobile">
-                      <td class="hide_on_mobile">
-                        <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0" class="hide_on_mobile">
-                          <common-table-spacer-element height="5" />
-                          <tr>
-                            <td align="left" valign="top" style="font-size: 17px;line-height: 23px;color: #202022;font-weight: 400;">
-                              ${content.teaser}
-                            </td>
-                          </tr>
-                          <if(continueReading)>
-                            <common-table-spacer-element height="9" />
-                            <common-cta-element link-url=contentUrl />
-                          </if>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-                <td align="right" valign="top" width="200" class="wdt">
-                  <marko-core-obj-value|{ value: image }| obj=content field="primaryImage" as="object">
-                    <marko-newsletter-imgix
-                      src=image.src
-                      alt=image.alt
-                      options={ w: 400, h: 266, fit: "crop", auto: "format,compress" }
-                      class="img_resize2"
-                      attrs={ border: 0, width: 200, height: 133, style: imgStyles }
-                    >
-                      <@link href=contentUrl target="_blank" attrs={ style: imgLinkStyles } />
-                    </marko-newsletter-imgix>
-                  </marko-core-obj-value>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-        <tr>
-          <td align="left" valign="top" class="show_on_mobile" style="display: none;mso-hide: all;">
-            <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0" style="mso-hide: all;">
-              <common-table-spacer-element height="10" />
-              <tr>
-                <td align="left" valign="top" style="font-size: 17px;line-height: 23px;color: #202022;font-weight: 400;">
-                  ${content.teaser}
-                </td>
-              </tr>
-              <if(continueReading)>
-                <common-table-spacer-element height="9" />
-                <common-cta-element link-url=contentUrl />
+              <if(sectionName === 'Main' || 'Fintech for Advisers')>
+                <common-content-main-block
+                  content=content
+                  continue-reading=continueReading
+                  url-params=urlParams
+                  content-url=contentUrl
+                />
               </if>
-            </table>
-          </td>
-        </tr>
-      </if>
-      <else>
-        <tr>
-          <td align="left" valign="top">
-            <a style="font-size: 24px;line-height: 28px;color: #202022;font-weight: 700;text-decoration: none;" href=contentUrl>
-              ${content.name}
-            </a>
-          </td>
-        </tr>
-        <common-table-spacer-element height="5" />
-        <tr>
-          <td align="left" valign="middle" style="font-size: 17px;line-height: 23px;color: #202022;font-weight: 400;">
-            ${content.teaser}
-          </td>
-        </tr>
-        <if(continueReading)>
-          <common-table-spacer-element height="9" />
-          <common-cta-element link-url=contentUrl />
-        </if>
-      </else>
-      <common-table-spacer-element height="32" />
-    </table>
-  </td>
-</tr>
+
+              <if(sectionName === 'Podcast')>
+                <common-content-podcast-block
+                  content=content
+                  continue-reading=continueReading
+                  url-params=urlParams
+                  content-url=contentUrl
+                />
+              </if>
+
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
